User panel code logic